RESOLVED FIXED231834
[WebAuthn] Many Objective-C classes leak their instance variables
https://bugs.webkit.org/show_bug.cgi?id=231834
Summary [WebAuthn] Many Objective-C classes leak their instance variables
David Kilzer (:ddkilzer)
Reported 2021-10-15 14:35:47 PDT
Many Objective-C classes used by WebAuthn leak their instance variables due to missing -dealloc methods that release the instance variables. Found by the clang static analyzer.
Attachments
Patch v1 (8.92 KB, patch)
2021-10-15 14:41 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-15 14:36:06 PDT
David Kilzer (:ddkilzer)
Comment 2 2021-10-15 14:41:29 PDT
Created attachment 441429 [details] Patch v1
Brent Fulgham
Comment 3 2021-10-15 14:55:49 PDT
Comment on attachment 441429 [details] Patch v1 Oh, boy. Thank you for finding these. r=me.
David Kilzer (:ddkilzer)
Comment 4 2021-10-16 20:39:32 PDT
Comment on attachment 441429 [details] Patch v1 Marking cq+ because api-ios failures happen with and without the patch: Failures in API Test first run: ['TestWebKitAPI.WebKitLegacy.ScrollingDoesNotPauseMedia', 'TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS', 'TestWebKitAPI.WebKitLegacy.PreemptVideoFullscreen'] Failures in API Test second run: ['TestWebKitAPI.WebKitLegacy.ScrollingDoesNotPauseMedia', 'TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS', 'TestWebKitAPI.WebKitLegacy.PreemptVideoFullscreen'] Flaky Tests: Failures in API Test on clean tree: New failures: TestWebKitAPI.WebKitLegacy.ScrollingDoesNotPauseMedia, TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS, TestWebKitAPI.WebKitLegacy.PreemptVideoFullscreen Not sure why the bots flagged this as a regression, though.
David Kilzer (:ddkilzer)
Comment 5 2021-10-16 20:39:51 PDT
The api-gtk failures are also unrelated.
EWS
Comment 6 2021-10-16 21:03:29 PDT
Committed r284331 (243126@main): <https://commits.webkit.org/243126@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441429 [details].
Note You need to log in before you can comment on or make changes to this bug.