Source/WebKit/UIProcess/API/Cocoa/_WKPublicKeyCredentialUserEntity.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020 Apple Inc. All rights reserved.
+ * Copyright (C) 2020-2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -36,6 +36,13 @@
     self.identifier = identifier;
     self.displayName = displayName;
     return self;
+}
+
+- (void)dealloc
+{
+    [_identifier release];
+    [_displayName release];
+    [super dealloc];
 }
 
 @end
